--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,3 +12,5 @@ serde = { version = "1.0.125", features = ["derive"] }
 structopt = "0.3.21"
 colored = "2.0.0"
 chrono = "0.4.19"
+dirs = "3.0.1"
+anyhow = "1.0.40"
