--- a/.github/workflows/fmt.yml
+++ b/.github/workflows/fmt.yml
@@ -22,6 +22,7 @@ jobs:
         with:
           command: fmt
           args: -- --check --
+        fail-fast: false
       - name: Commit hash
         id: hash
         run: echo "::set-output name=sha_short::$(git rev-parse --short HEAD)"
