--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -1,64 +1,146 @@
-name: Rust
-
+name: Main workflow
 on:
   push:
-    branches: [ master ]
+    paths-ignore:
+      - "docs/**"
+      - "**.md"
   pull_request:
-    branches: [ master ]
-env:
-  CARGO_TERM_COLOR: always
+    paths-ignore:
+      - "docs/**"
+      - "**.md"
+
 jobs:
-  fmt:
+  # Run the `rustfmt` code formatter
+  rustfmt:
+    name: Rustfmt [Formatter]
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v2
-      - run: sudo apt-get update && sudo apt-get install gcc clang g++ -y
-      - uses: actions-rs/toolchain@v1.0.6
+      - name: Setup | Checkout
+        uses: actions/checkout@v2
+
+      - name: Setup | Rust
+        uses: actions-rs/toolchain@v1
         with:
           toolchain: stable
           override: true
-      - run: rustup component add rustfmt
-      - uses: actions-rs/cargo@v1
-        with:
-          command: fmt
-          args: -- --check --
+          profile: minimal
+          components: rustfmt
+
+      - name: Setup | libdbus (ubuntu)
+        run: sudo apt-get install libdbus-1-dev
+
+      - name: Build | Format
+        run: cargo fmt --all -- --check
+
+  # Run the `clippy` linting tool
   clippy:
-    runs-on: ubuntu-latest
+    name: Clippy [Linter]
+    strategy:
+      matrix:
+        os: [ubuntu-latest, macOS-latest, windows-latest]
+    runs-on: ${{ matrix.os }}
     steps:
-      - uses: actions/checkout@v2
-      - run: sudo apt-get update && sudo apt-get install gcc clang g++ -y
-      - uses: actions-rs/toolchain@v1.0.6
+      - name: Setup | Checkout
+        uses: actions/checkout@v2
+
+      # Cache files between builds
+      # - name: Setup | Cache Cargo
+      #   uses: actions/cache@v2
+      #   with:
+      #     path: |
+      #       ~/.cargo/registry
+      #       ~/.cargo/git
+      #       target
+      #     key: ${{ runner.os }}-cargo-${{ hashFiles('**/Cargo.lock') }}
+
+      - name: Setup | libdbus (ubuntu)
+        if: matrix.os == 'ubuntu-latest'
+        run: sudo apt-get install libdbus-1-dev
+
+      - name: Setup | Rust
+        uses: actions-rs/toolchain@v1
         with:
           toolchain: stable
           override: true
-      - run: rustup component add clippy
-      - uses: actions-rs/cargo@v1
+          profile: minimal
+          components: clippy
+
+      - name: Build | Lint
+        uses: actions-rs/cargo@v1
         with:
           command: clippy
-          args: --all-features --all-targets
+          args: --workspace --locked --all-targets --all-features -- -D clippy::all
+
+  # Ensure that the project could be successfully compiled
+  cargo_check:
+    name: Compile
+    runs-on: ubuntu-latest
+    steps:
+      - name: Setup | Checkout
+        uses: actions/checkout@v2
+
+      # Cache files between builds
+      # - name: Setup | Cache Cargo
+      #   uses: actions/cache@v2
+      #   with:
+      #     path: |
+      #       ~/.cargo/registry
+      #       ~/.cargo/git
+      #       target
+      #     key: ${{ runner.os }}-cargo-${{ hashFiles('**/Cargo.lock') }}
+
+      - name: Setup | Rust
+        uses: actions-rs/toolchain@v1
+        with:
+          toolchain: stable
+          profile: minimal
+          override: true
+
+      - name: Build | Check
+        run: cargo check --workspace --locked
+
+  # Run tests on Linux, macOS, and Windows
+  # On both Rust stable and Rust nightly
   test:
-    runs-on: ubuntu-latest
+    name: Test Suite
+    runs-on: ${{ matrix.os }}
+    needs: cargo_check # First check then run expansive tests
+    strategy:
+      fail-fast: false
+      matrix:
+        os: [ubuntu-latest, macOS-latest, windows-latest]
+        rust: [stable, nightly]
     steps:
-      - uses: actions/checkout@v2
-      - run: sudo apt-get update && sudo apt-get install gcc clang g++ -y
-      - uses: actions-rs/toolchain@v1.0.6
+      - name: Setup | Checkout
+        uses: actions/checkout@v2
+
+      - name: Setup | libdbus (ubuntu)
+        if: matrix.os == 'ubuntu-latest'
+        run: sudo apt-get install libdbus-1-dev
+
+      # Cache files between builds
+      # - name: Setup | Cache Cargo
+      #   uses: actions/cache@v2
+      #   with:
+      #     path: |
+      #       ~/.cargo/registry
+      #       ~/.cargo/git
+      #       target
+      #     key: ${{ runner.os }}-${{ matrix.rust }}-cargo-${{ hashFiles('**/Cargo.lock') }}
+
+      # Install all the required dependencies for testing
+      - name: Setup | Rust
+        uses: actions-rs/toolchain@v1
         with:
-          toolchain: stable
+          toolchain: ${{ matrix.rust }}
+          profile: minimal
           override: true
-      - uses: actions-rs/cargo@v1
-        with:
-          command: test
-          args: --verbose
-  build:
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v2
-      - run: sudo apt-get update && sudo apt-get install gcc clang g++ -y
-      - uses: actions-rs/toolchain@v1.0.6
-        with:
-          toolchain: stable
-          override: true
-      - uses: actions-rs/cargo@v1
-        with:
-          command: build
-          args: --verbose
+
+      # Install Mercurial (pre-installed on Linux and windows)
+      - name: Setup | Mercurial (macos)
+        if: matrix.os == 'macOS-latest'
+        run: brew install mercurial
+
+      # Run the ignored tests that expect the above setup
+      - name: Build | Test
+        run: cargo test --workspace --locked --all-features -- -Z unstable-options --include-ignored
