--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -69,7 +69,7 @@ jobs:
         uses: actions-rs/cargo@v1
         with:
           command: clippy
-          args: --workspace --locked --all-targets --all-features -- -D clippy::all
+          args: --workspace --locked --all-targets --all-features
 
   # Ensure that the project could be successfully compiled
   cargo_check:
