--- a/vscode-salt/package.json
+++ b/vscode-salt/package.json
@@ -14,40 +14,49 @@
   ],
   "main": "./dist/extension.js",
   "contributes": {
-      "viewsContainers": {
-          "activitybar": [
-              {
-                  "id": "salt-sidebar-view",
-                  "title": "Salt",
-                  "icon": "../assets/salt.svg"
-              }
-          ]
-      },
-      "views": {
-        "salt-sidebar-view": [
-            {
-                "type": "webview",
-                "id": "salt-sidebar",
-                "name": "Salt",
-                "icon": "../assets/salt.svg",
-                "contextualTitle": "Salt"
-            }
-        ]
-      }
+    "viewsContainers": {
+      "activitybar": [
+        {
+          "id": "salt-sidebar-view",
+          "title": "Salt",
+          "icon": "../assets/salt.svg"
+        }
+      ]
+    },
+    "views": {
+      "salt-sidebar-view": [
+        {
+          "type": "webview",
+          "id": "salt-sidebar",
+          "name": "Salt",
+          "icon": "../assets/salt.svg",
+          "contextualTitle": "Salt"
+        }
+      ]
+    }
   },
   "scripts": {
     "vscode:prepublish": "yarn run package",
-    "compile": "webpack",
-    "watch": "webpack --watch",
-    "package": "webpack --mode production --devtool hidden-source-map",
+    "compile": "webpack --config ./build/node-extension.webpack.config.js",
+    "watch": "concurrently \"rollup -c -w\" \"webpack --watch --config ./build/node-extension.webpack.config.js\"",
+    "package": "webpack --mode production --devtool hidden-source-map --config ./build/node-extension.webpack.config.js",
     "test-compile": "tsc -p ./",
-    "pretest": "yarn run test-compile && yarn run lint",
+    "test-watch": "tsc -watch -p ./",
     "format": "prettier --write ."
   },
   "devDependencies": {
+    "@rollup/plugin-commonjs": "^19.0.0",
+    "@rollup/plugin-node-resolve": "^13.0.0",
+    "@rollup/plugin-typescript": "^8.2.1",
+    "@tsconfig/svelte": "^1.0.10",
     "@types/node": "^12.11.7",
     "@types/vscode": "^1.56.0",
     "prettier": "^2.3.0",
+    "rollup": "^2.48.0",
+    "rollup-plugin-svelte": "^7.1.0",
+    "rollup-plugin-terser": "^7.0.2",
+    "svelte-loader": "^3.1.1",
+    "svelte-preprocess": "^4.7.3",
     "ts-loader": "^8.0.14",
     "typescript": "^4.1.3",
     "webpack": "^5.19.0",
