--- a/vscode-salt/tsconfig.json
+++ b/vscode-salt/tsconfig.json
@@ -6,11 +6,12 @@
     "lib": ["es6"],
     "sourceMap": true,
     "rootDir": "src",
+    "allowSyntheticDefaultImports": true,
     "strict": true /* enable all strict type-checking options */
     /* Additional Checks */
     // "noImplicitReturns": true, /* Report error when not all code paths in function return a value. */
     // "noFallthroughCasesInSwitch": true, /* Report errors for fallthrough cases in switch statement. */
     // "noUnusedParameters": true,  /* Report errors on unused parameters. */
   },
-  "exclude": ["node_modules", ".vscode-test"]
+  "exclude": ["node_modules", ".vscode-test", "webviews"]
 }
