--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -6,3 +6,9 @@ updates:
     interval: daily
     time: "08:00"
   open-pull-requests-limit: 10
+- package-ecosystem: npm
+  directory: "/vscode-salt"
+  schedule:
+    interval: daily
+    time: "08:00"
+  open-pull-requests-limit: 10
