--- a/vscode-salt/package.json
+++ b/vscode-salt/package.json
@@ -55,7 +55,8 @@
     "rollup": "^2.48.0",
     "rollup-plugin-svelte": "^7.1.0",
     "rollup-plugin-terser": "^7.0.2",
-    "svelte-loader": "^3.1.1",
+    "svelte": "^3.38.2",
+    "svelte-check": "^1.5.4",
     "svelte-preprocess": "^4.7.3",
     "ts-loader": "^9.1.2",
     "typescript": "^4.1.3",
