--- a/vscode-salt/package.json
+++ b/vscode-salt/package.json
@@ -59,6 +59,7 @@
 		"svelte-check": "^1.5.4",
 		"svelte-preprocess": "^4.7.3",
 		"ts-loader": "^9.2.0",
+		"tslib": "^2.2.0",
 		"typescript": "^4.1.3",
 		"webpack": "^5.37.1",
 		"webpack-cli": "^4.4.0"
