--- a/vscode-salt/package.json
+++ b/vscode-salt/package.json
@@ -53,6 +53,7 @@
 		"@types/vscode": "^1.56.0",
 		"prettier": "^2.3.0",
 		"rollup": "^2.48.0",
+		"rollup-plugin-css-only": "^3.1.0",
 		"rollup-plugin-svelte": "^7.1.0",
 		"rollup-plugin-terser": "^7.0.2",
 		"svelte": "^3.38.2",
