feat: extension: try fix bugs

--- a/vscode-salt/package.json
+++ b/vscode-salt/package.json
@@ -10,7 +10,7 @@
 		"Other"
 	],
 	"activationEvents": [
-		"onCommand:vscode-salt.helloWorld"
+        "onView:salt-sidebar"
 	],
 	"main": "./dist/extension.js",
 	"contributes": {
