--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,6 +3,7 @@ name = "salt"
 version = "0.1.1"
 authors = ["Milo123459"]
 edition = "2018"
+include = ["src/**/*", "LICENSE", "README.md"]
 
 [dependencies]
 serde_json = "1.0.64"
